--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <h2>TODO List</h2>
     <div class="container">
-        <form action="" onsubmit="" class="Todolist">
+        <form action="" onclick="" class="Todolist">
             <input type="text" placeholder="newtask" id="new_task_input" >
             <button id="btn">Add task</button>  
             
